# prettier-plugin-prisma

./: .gitignore  .npmignore  .prettierignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  renovate.json  tsconfig.json
.codesandbox/: ci.json
.github/: dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-merge.yml  main.yml  pr.yml
.husky/: pre-push
lib/: plugin.js
rust/hostname/: Cargo.toml
rust/hostname/src/: lib.rs
rust/prisma-formatter/: Cargo.toml
rust/prisma-formatter/src/: lib.rs
scripts/: build.js  build.ts
src/: lib.rs  plugin.spec.ts  plugin.ts  setupTests.ts
src/rust/prisma-formatter/: Cargo.toml
src/rust/prisma-formatter/src/: lib.rs
test/: plugin.spec.js
test/__fixtures__/: formatted.prisma  unformatted.prisma
test/__testutils__/: rawSerializer.js
