[package]
name = "prisma-formatter"
version = "0.1.0"
authors = ["Umidbek Karimov"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.78" }
datamodel = { git = "https://github.com/prisma/prisma-engines", rev = "57771c0558568c7d08bd34c7248af5244ae16bd9" }

[profile.release]
lto = true
