[package]
name = "prisma-formatter"
version = "0.1.0"
authors = ["Umidbek Karimov"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { git = "https://github.com/umidbekk/wasm-bindgen", branch = "fix-imports" }
datamodel = { git = "https://github.com/prisma/prisma-engines", tag = "2.25.0" }
